--- a/setup/statics.tex
+++ b/setup/statics.tex
@@ -1,22 +1,23 @@
 \newcommand{\documenttype}{DTU Thesis}
-\newcommand{\thesistitle}{My Thesis} % Your thesis title
+\newcommand{\thesistitle}{Discovering Hidden Dynamics with Scientific
+Machine Learning} % Your thesis title
 
-\newcommand{\thesisauthor}{My Name} % Your name :) 
-\newcommand{\studentnumber}{sXXXXXX} % Your student number
-\newcommand{\thestudyprogram}{My Study Program} % Your study program
-\newcommand{\thesisetcs}{XX}
-\newcommand{\thedate}{My Deadline} % Your deadline
+\newcommand{\thesisauthor}{Marcus Galea Jacobsen} % Your name :) 
+\newcommand{\studentnumber}{s194336} % Your student number
+\newcommand{\thestudyprogram}{Human-Centered Artificial Intelligence} % Your study program
+\newcommand{\thesisetcs}{30}
+\newcommand{\thedate}{August 17, 2025} % Your deadline
 
-\newcommand{\thesissupervisor}{Supervisor Name\\Supervisor Title\\Supervisor Department\\Technical University of Denmark} % Your supervisor's name, title, and department
+\newcommand{\thesissupervisor}{Allan Peter Engsig-Karup\\Associate Professor\\Department of Applied Mathematics and Computer Science\\Technical University of Denmark} % Your supervisor's name, title, and department
 
-\newcommand{\department}{Department} % Your department name
-\newcommand{\departmentdescriber}{Department Description} % A short description or tagline of your department
+\newcommand{\department}{DTU Compute} % Your department name
+\newcommand{\departmentdescriber}{Department of Applied Mathematics and Computer Science} % A short description or tagline of your department
 
-\newcommand{\addressI}{Address} % First line of your department address
-\newcommand{\addressII}{Building XXX} % Second line of your department address (if applicable)
-\newcommand{\addressIII}{Postal Code and City} % Third line of your department address (if applicable)
-\newcommand{\departmentemail}{Department Email} % Your department email address
-\newcommand{\departmentwebsite}{Department Website} % Your department website URL
+\newcommand{\addressI}{Richard Petersens Plads} % First line of your department address
+\newcommand{\addressII}{Building 303} % Second line of your department address (if applicable)
+\newcommand{\addressIII}{2800 Kgs. Lyngby} % Third line of your department address (if applicable)
+\newcommand{\departmentemail}{compute@compute.dtu.dk} % Your department email address
+\newcommand{\departmentwebsite}{www.compute.dtu.dk} % Your department website URL
 
 %% DTU Compute
 % \newcommand{\department}{DTU Compute}
