--- a/setup/settings.tex
+++ b/setup/settings.tex
@@ -153,3 +153,16 @@
     tabsize=2,
     title=\lstname,
 }
+
+%==================================================
+% Appendix formatting
+%==================================================
+\newcommand{\myAppendix}{
+    \appendix
+    \renewcommand{\thechapter}{} % suppress chapter number
+    \renewcommand{\thesection}{\Alph{section}}
+    \renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
+    \renewcommand{\thefigure}{\thesection.\arabic{figure}}
+    \renewcommand{\thetable}{\thesection.\arabic{table}}
+    \renewcommand{\theequation}{\thesection.\arabic{equation}}
+}
