--- a/backmatter/appendix.tex
+++ b/backmatter/appendix.tex
@@ -1,1 +1,2 @@
-\section{My first appendix section}\label{sec:my_first_appendix_section}
+\chapter{My first Appendix}\label{sec:my_first_appendix_section}
+\section{Exciting extra content for the curious reader}
