--- a/frontmatter/approval.tex
+++ b/frontmatter/approval.tex
@@ -30,7 +30,8 @@
     \vspace*{-16ex}
 
     \begin{centering}
-        \includegraphics[width=1.9\textwidth]{frontmatter/front_gfx/dtu_frise_gray.pdf}
+        \includegraphics[width=1.9\textwidth]{frontmatter/front_gfx/dtu_frise.pdf}
+        % \includegraphics[width=1.9\textwidth]{frontmatter/front_gfx/dtu_frise_gray.pdf}
     \end{centering}
     
     \vspace{\stretch{.5}}
