--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \input{setup/statics}   % custom commands/macros
 \input{setup/settings}  % title, author, etc.
 
+
 \begin{document}
 \large
 
@@ -53,7 +54,7 @@
 \myAppendix             % Defined in setup/settings
 \chapter*{Appendix}
 \phantomsection
-\addcontentsline{toc}{chapter}{Appendix}
+\addcontentsline{toc}{part}{Appendix}
 
 \input{backmatter/appendix}
 
