ToC frontmatter format

--- a/frontmatter/conventions.tex
+++ b/frontmatter/conventions.tex
@@ -1,5 +1,5 @@
 \chapter*{Abbreviations}
-\addcontentsline{toc}{chapter}{\numberline{}Abbreviations}
+\addcontentsline{toc}{section}{Abbreviations}
 
 % \begin{table}[H]
 %     \centering
@@ -13,7 +13,7 @@
 
 
 \chapter*{Terminology}
-\addcontentsline{toc}{chapter}{\numberline{}Terminology}
+\addcontentsline{toc}{section}{Terminology}
 
 % \begin{table}[H]
 %     \centering
@@ -27,7 +27,7 @@
 
 
 \chapter*{Notation}
-\addcontentsline{toc}{chapter}{\numberline{}Notation}
+\addcontentsline{toc}{section}{Notation}
 
 % % Define the notation used in this thesis. This is a list of symbols and their meanings.
 % \begin{table}[H]
