--- a/setup/settings.tex
+++ b/setup/settings.tex
@@ -123,7 +123,8 @@
     \fancyfoot{}
     \renewcommand{\headrulewidth}{0pt}
     \fancyfoot[LE,RO]{\footnotesize \thepage}
-    \fancyfoot[RE,LO]{\footnotesize \thesistitle}
+    \fancyfoot[RE]{\footnotesize \leftmark}
+    \fancyfoot[RE, LO]{\footnotesize \thesistitle}
     \fancyhfoffset[E,O]{0pt}
 }
 
@@ -132,11 +133,9 @@
     \fancyfoot{}
     \renewcommand{\headrulewidth}{0pt}
     \fancyfoot[LE,RO]{\footnotesize \thepage}
-    \fancyfoot[RE,LO]{\footnotesize \thesistitle}
+    \fancyfoot[RE, LO]{\footnotesize \thesistitle}
     \fancyhfoffset[E,O]{0pt}
 }
-
-\pagestyle{main}
 
 %==================================================
 % Listings Configuration (for code)
